storage/maria/ma_extra.c
@@ -279,11 +279,12 @@ int maria_extra(MARIA_HA *info, enum ha_extra_function function,
   case HA_EXTRA_FORCE_REOPEN:
     /*
       MySQL uses this case after it has closed all other instances
-      of this table.
-      We however do a flush here for additional safety.
+      of this table;  Note that MySQL may have several copies of the table
+      in the same thread!
+
+      We owever do a flush of data and index here for additional safety.
     */
     /** @todo consider porting these flush-es to MyISAM */
-    DBUG_ASSERT(share->reopen == 1);
     error= _ma_flush_table_files(info, MARIA_FLUSH_DATA | MARIA_FLUSH_INDEX,
                                  FLUSH_FORCE_WRITE, FLUSH_FORCE_WRITE);
     if (!error && share->changed)
